# terminus

./: .gitignore  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-24fb8715806c463ba0ce6193aeff8cbc2610c757c29674e75cca601e7cf3563e.json  query-3ab9810e9469113836fd1e6cddd84fe0a3708556d7cfc786aa3dd030bb2f3727.json  query-3dc14bc91cc730f9899d04e3f4ee11e553e0e7a591d94b1ca48b6d85e44e3800.json  query-50e2d394a3359afa05d0d46f2f0707dca8e69fd02c893e05be5e1e95e20957c9.json  query-5c546b2a27dc3bbcac3d82cc1dd8ffa64e5e0c5f26912b9d9d67c44b882a88ba.json  query-7821e9a0168795999a852a2f4164deedc93c83fc7b1063881ca86feb84b3e407.json  query-7b056d63d0510726c517d31c3614a1d0e0bac7cbeacddd8c040f8306e4207e5c.json  query-95818cd1d1e85f6f70abe405ac70134ddb6e6ebecf268d65e71f10140836aa73.json  query-a5a5de42d85501c39cdeeb6f3b2f9171347665df1a38fd1fcc494a7fe741f130.json  query-aea3b52c391863b52dfa454cf6f464140888cd5e0f3dd2a79d32d68ac1eaa3aa.json  query-c25e1cc09644a926e333d5627ee5c52851f06f8416c4bdf0709b19bf47ed02b2.json  query-c26a1deffbf8d4da6124db42e5bf924c8c7cfd862ffefce0aaa693331b940ecf.json  query-ee9f1499de77902c9350d336bf9a6698e0b8a6fe25673706a7c525c57e7a1c61.json  query-f434eac633de7ed598010963b14b3dbd7d849b4e0f62ec02fc3442f6854b0f18.json  query-fb95e10c966111788ac5281333a4ca0e116d32050d9cb0da030057fbf571b311.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.sh  icon.icns
src-tauri/migrations/: 20241028_INITIAL.up.sql  old.sql
src-tauri/src/: database.rs  (+9 more)
(+51 files in other folders)
