[package]
name = "terminus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4.38"
tokio = "1.41.0"
futures = "0.3.31"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
